style: vertical alignment fix in breadcrumbs

--- a/src/components/gatstrap.scss
+++ b/src/components/gatstrap.scss
@@ -189,6 +189,7 @@ li.rc-menu-item.d-none {
   overflow: hidden;
   text-overflow: ellipsis;
   margin-top: 0.2rem;
+  line-height: 2.2rem;
   @media (max-width: 992px) {
     margin-right: 0.2rem;
   }
